--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,37 @@ li{
 #info {
     background-color:dimgrey;
 }
+
+#location, #calendar {
+   border: 1px solid #F5793B; /*  #F5793B 62034e ;*/
+    color:    rgb(194, 194, 194);
+    -webkit-border-radius: 50px; 
+    border-radius: 50px; 
+   /* -webkit-border-radius: 50px; 
+    border-radius: 50px; 
+    -webkit-box-shadow: 12px 12px 24px rgba(98, 3, 77, 0.459),
+    -12px -12px 24px rgb(59, 6, 6);
+    box-shadow: 12px 12px 24px (98, 3, 77, 0.459),
+    -12px -12px 24px rgb(59, 6, 6);*/
+}
+input[type="date"]::-webkit-calendar-picker-indicator {
+    cursor: pointer;
+    border-radius: 4px;
+    margin-right: 2px;
+    opacity: 0.6;
+    filter: invert(0.8);
+  }
+
+  .modal-header    {
+    background: linear-gradient(180deg, rgba(98,3,78,1) 0%, rgba(48,25,1,1) 100%);
+    border-bottom: 0px;
+  }
+  .modal-footer {
+    border-top: 0px;
+  }
+  
+
+  .modal-body, .modal-footer {
+    background-color: #0b0600;
+  }
+
