--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,18 @@
 li{
-    
-        width: 100px;
-        height: 50px;
-        padding: 20px;
-        border: 1px solid;
-        list-style-type: none;
-        background-color:rgb(199, 164, 153);
-        text-align: center;
-        color: white;
+    list-style-type: none;
+    text-align: center;
+    color: white;
       
 }
 
 #info {
     background-color:dimgrey;
+}
+
+#card{
+
+    padding: 20px;
+    border: 1px solid;
+    background-color:rgb(199, 164, 153);
+
 }
