--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,36 @@
-li{
-    list-style-type: none;
-    text-align: center;
-    color: white;
-      
+li {
+  list-style-type: none;
+  text-align: center;
+  color: white;
 }
 
 #info {
-    background-color:dimgrey;
+  margin-top: 20px;
+  background-color:#0b0600;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  width: 100%;
 }
 
-#card{
-
-    padding: 20px;
-    border: 1px solid;
-    background-color:rgb(199, 164, 153);
-
+.card {
+  width: 23%;
+  padding: 20px;
+  background-color:rgba(29, 28, 28, 0.815);
+  margin-bottom: 15px;
 }
+
+@media only screen and (max-width: 600px) {
+  #info {
+    flex-direction: column;
+    min-width: 270px;
+  }
+
+  .card {
+    width: 100%;
+  }
+}
+
 #location, #calendar {
    border: 1px solid #F5793B; /*  #F5793B 62034e ;*/
     color:    rgb(194, 194, 194);
