--- a/styles.css
+++ b/styles.css
@@ -64,3 +64,25 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     background-color: #0b0600;
   }
 
+  #scrollToTop{
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: rgb(88, 87, 87);
+    color : white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 10px;
+    font-size: 18px;
+  }
+
+  #myBtn:hover {
+    background-color: rgb(117, 115, 115);
+  }
+
+
+
