--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   width: 100%;
+  padding: 0px 10px 0px 10px;
 }
 
 .card {
@@ -25,6 +26,62 @@
     width: 100%;
   }
 }
+
+.card-image {
+  min-height: 43%;
+}
+
+.card-text {
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+h4 {
+  color:#F5793B;
+  font-size: 19px;
+  
+}
+
+a {
+  color: grey;
+  text-decoration: none;
+  font-size: 12px;
+  cursor: pointer;
+  padding-left: 10px;
+}
+
+a:hover { 
+  color: #F5793B;
+}
+
+p {
+  list-style-type: none;
+  color: grey;
+  font-size: 15px;
+  margin: 0;
+}
+
+.buttons-container {
+  height: 15%;
+}
+
+.button-learnMore {
+  cursor: pointer;
+  border: 1px solid #F5793B;
+  color: grey;
+  -webkit-border-radius: 50px;
+  border-radius: 50px;
+  background-color:  transparent;
+  width: 100%;
+}
+
+.button-learnMore:hover { 
+  color: #F5793B;
+}
+
 
 #location, #calendar {
    border: 1px solid #F5793B; /*  #F5793B 62034e ;*/
