--- a/player.css
+++ b/player.css
@@ -1,10 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
-html {
- overflow-y: auto;
- overflow-x: hidden;
- height: 100%;
-}
+
 :root {
  --dark-black: #121212;
  --light-black: #1e272c; 
@@ -24,48 +20,9 @@ body {
  padding:0;
  margin: 0;
 }
-.topnav { 
- display: flex;
- justify-content: flex-start;
- width: 100%;
- height: 10vh;
- background-color: var(--dark-black);
- padding: 10px; 
-}
-.topnav span {
- padding: 18px;
- color: var(--white-color);
- animation: maintext 0.9s ease-in-out infinite;
-}
-@keyframes maintext {
- 0% {
- color: var(--medium-salmon);
-}
-100% {
- color: var(--light-salmon);
-}
-}
-#small-text {
- font-size: 0.8em;
- color: var(--mild-color);
- display: inline-block;
- animation: textanimation 0.9s ease-in-out both;
-}
-@keyframes textanimation {
-0% {
- letter-spacing: -0.5rem; 
-}
-40% {
- opacity: 0.6;
-}
-100% {
- opacity: 1;
-}
-}
-#logo {
- margin-left:0;
- width: 8vw;
-}
+
+
+
 .center-wrapper {
  display: flex;
  justify-content: center;
@@ -97,10 +54,10 @@ body {
 .controls-wrapper {
   
  margin: 10px;
- height: 20vh;
+ height: 25vh;
  width: 28vw;
 }
-.title {
+.player-title {
  width: 100%;
  height: auto;
  padding: 5px;
@@ -109,14 +66,13 @@ body {
  flex-direction: row;
 
 }
-.title a {
+.player-title a {
 color: var(--white-color);
  font-size: 0.8em;
  text-decoration: none;
 }
 
 .controls {
-
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 10px;
@@ -135,10 +91,53 @@ color: var(--white-color);
  text-align: center;
 }
 
+i.on {
+    color: var(--dark-green);
+   }
+
 .progress {
     margin: 0 auto;
     margin-top: 25px;
     width: 28vw;
-    height: 8px;
+    height: 5px;
     border-radius: 15px;
    }
+
+.tracks {
+    margin-top: 10px;
+    height: 150px;
+    overflow: scroll;
+}
+.track {
+    display: grid;
+    align-items:center;
+    grid-column-gap: 5px;
+    padding-bottom: 3px;
+    grid-template-columns: 15px 55px 280px 15px;
+    cursor: pointer;
+}
+
+.track i {
+    font-size: 10px;
+    color: var(--mild-color);
+    cursor: pointer;
+   }
+
+.track img{
+    width:40px;
+    height:40px;
+}
+
+.track div {
+     color: var(--white-color);
+     font-size: 0.8em;
+     text-decoration: none;
+    }
+
+.track:hover {
+    background-color: var(--dark-green);
+}
+
+.track-playing{
+    background-color: var(--dark-green);
+}
