--- a/layout.css
+++ b/layout.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 body {
   background-color: #0b0600;
-  color: rgb(194, 194, 194);
+  color: #c2c2c2;
 }
 
 navbar {
