--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,111 @@
+
 #cards-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 10;
+  column-gap: 20px;
+  row-gap: 20px;
+  margin: 20px 100px;
+}
+
+.card {
+  background-color: rgba(37, 38, 37, 0.6);
+  width: 100%;
+  height: 500px;
+  padding: 10px;
+  transition: 0.3s;
+}
+
+.card:hover {
+  background-color: rgba(37, 38, 37, 1);
+}
+
+img {
+  width: 100%;
+  height: 165px;
+  object-fit: cover;
+}
+
+.card-text {
+  height: 280px;
+}
+
+.card-status {
+  text-align: center;
+  color: rgb(255,255,255);
+  opacity: 0.6;
+}
+
+.card-text h5 {
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  padding-top: 20px;
+  color:#F5793B;
+}
+
+.card-date {
+  opacity: 0.7;
+  font-size: 12px;
+  padding-top: 5px;
+  color: grey;
+}
+
+.card-genre-details {
+  text-align: center;
+  height: 120px;
+  padding-top: 20px;
+}
+
+.card-genre-details p {
+  color: grey;
+  margin: 0;
+}
+
+.card-price {
+  text-align: center;
+}
+
+.buttons-container {
+  height: 15%;
+  text-align: center;
+  height: 50px;
+}
+
+.button-learnMore {
+  cursor: pointer;
+  border: 1px solid rgba(245, 121, 59, 1);
+  color: grey;
+  -webkit-border-radius: 50px;
+  border-radius: 50px;
+  background-color:  transparent;
+  width: 100%;
+}
+
+.button-learnMore:hover { 
+  color: rgba(245, 121, 59, 1);
+}
+
+a {
+  color: rgba(245, 121, 59, 1);
+  text-decoration: none;
+  font-size: 12px;
+  cursor: pointer;
+  padding-left: 10px;
+}
+
+a:hover { 
+  color: rgba(245, 121, 59, 0.4);
+}
+
+@media only screen and (max-width: 600px) {
+  #cards-container {
+    grid-template-columns: 1fr;
+  }
+}
+
+/* #cards-container {
   margin-top: 20px;
   background-color:#0b0600;
   display: flex;
@@ -6,17 +113,18 @@
   justify-content: space-evenly;
   width: 100%;
   padding: 0px 10px 0px 10px;
-}
+} */
 
-.card {
-  width: 23%;
-  height: 370px;
+/* .card {
+  width: 20%;
+  height: 500px;
   background-color:rgba(14, 13, 13, 0.973);
   margin-bottom: 15px;
   padding: 10px;
-}
+  transition: 0.3s;
+} */
 
-@media only screen and (max-width: 600px) {
+/* @media only screen and (max-width: 600px) {
   .info {
     flex-direction: column;
     min-width: 270px;
@@ -25,9 +133,9 @@
   .card {
     width: 100%;
   }
-}
+} */
 
-.card-image {
+/* .card-image {
   min-height: 43%;
 }
 
@@ -37,9 +145,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-}
+} */
 
-h4 {
+/* h4 {
   color:#F5793B;
   font-size: 19px;
   
@@ -55,9 +163,9 @@ a {
 
 a:hover { 
   color: #F5793B;
-}
+} */
 
-p {
+/* p {
   list-style-type: none;
   color: grey;
   font-size: 15px;
@@ -76,11 +184,11 @@ p {
   border-radius: 50px;
   background-color:  transparent;
   width: 100%;
-}
+} */
 
-.button-learnMore:hover { 
+/* .button-learnMore:hover { 
   color: #F5793B;
-}
+} */
 
 
 #location, #calendar {
