--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,14 @@
   column-gap: 10;
   column-gap: 20px;
   row-gap: 20px;
-  margin: 20px 100px;
+  margin: 20px 150px;
 }
 
 .card {
   background-color: rgba(37, 38, 37, 0.6);
   width: 100%;
   height: 500px;
-  padding: 10px;
+  border-radius: 15px;
   transition: 0.3s;
 }
 
@@ -20,14 +20,16 @@
   background-color: rgba(37, 38, 37, 1);
 }
 
-img {
+.card-image img {
   width: 100%;
   height: 165px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
   object-fit: cover;
 }
 
 .card-text {
-  height: 280px;
+  height: 275px;
 }
 
 .card-status {
@@ -41,7 +43,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: start;
-  padding-top: 20px;
+  padding: 20px 10px 0px 10px;
   color:#F5793B;
 }
 
@@ -50,6 +52,14 @@ img {
   font-size: 12px;
   padding-top: 5px;
   color: grey;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  height: 20px;
+  white-space: nowrap;
+  width: 165px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding-left: 10px;
 }
 
 .card-genre-details {
@@ -68,9 +78,10 @@ img {
 }
 
 .buttons-container {
-  height: 15%;
+  height: 20%;
   text-align: center;
   height: 50px;
+  padding: 0px 10px 0px 10px;
 }
 
 .button-learnMore {
@@ -84,7 +95,7 @@ img {
 }
 
 .button-learnMore:hover { 
-  color: rgba(245, 121, 59, 1);
+  color: rgb(255,255,255);
 }
 
 a {
@@ -96,12 +107,13 @@ a {
 }
 
 a:hover { 
-  color: rgba(245, 121, 59, 0.4);
+  color: rgb(255,255,255);
 }
 
 @media only screen and (max-width: 600px) {
   #cards-container {
     grid-template-columns: 1fr;
+    margin: 20px 0;
   }
 }
 
