--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
   column-gap: 10;
   column-gap: 20px;
   row-gap: 20px;
-  margin: 20px 150px;
+  margin: 20px 0px 20px 0px;
 }
 
 .card {
@@ -55,7 +55,7 @@
   text-overflow: ellipsis;
   overflow: hidden;
   height: 20px;
-  white-space: nowrap;
+  white-space: wrap;
   width: 165px;
   overflow: hidden;
   text-overflow: ellipsis;
