--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,10 @@
 #cards-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  column-gap: 10;
   column-gap: 20px;
   row-gap: 20px;
   margin: 20px 0px 20px 0px;
+  padding: 0px 20px 0px 20px;
 }
 
 .card {
@@ -14,6 +14,7 @@
   height: 480px;
   border-radius: 15px;
   transition: 0.3s;
+  min-width: 240px;
 }
 
 .card:hover {
@@ -42,19 +43,29 @@
 .card-text h5 {
   height: 50px;
   display: flex;
-  justify-content: start;
+  justify-content: center;
   align-items: start;
   padding: 5px 10px 0px 10px;
   color:#F5793B;
-  font-size: 17px;
+  font-size: 19px;
 }
 
 .card-date {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.card-date p {
   opacity: 0.7;
   font-size: 12px;
   padding: 5px 0 0 0px;
   text-overflow: ellipsis;
   overflow: hidden;
+  max-width: 86px;
+  word-wrap: break-word;
+  max-height: 62px;
+  grid-column: 2 / span 1;
+  justify-self: center;
 }
 
 .card-genre-details {
@@ -120,6 +131,24 @@ a:hover {
     grid-template-columns: repeat(2, 1fr);
     margin: 20px 0;
   }
+
+  .card-status-details {
+    font-size: 11px;
+  }
+
+  .card-text h5 {
+    justify-content: center;
+    font-size: 15px;
+  }
+
+  .card-date {
+    grid-template-columns: 0.75fr 1.5fr 0.75fr;
+  }
+
+  .card-date p {
+    font-size: 10px;
+    max-height: 50px;
+  }
 }
 
 @media only screen and (max-width: 375px) {
@@ -140,8 +169,8 @@ a:hover {
     font-size: 16px;
   }
 
-  .card-classification .card-venue {
-    font-size: 18px;
+  .card-label {
+    font-size: 16px;
   }
 
   .button-learnMore {
