--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,30 @@
+:root {
+  --dark-black: #121212;
+  --light-black: #1e272c; 
+  --dark-green: #1db954;
+  --light-green: #1ed760;
+ 
+  --gradient: linear-gradient(180deg, rgba(98,3,78,1) 0%, rgba(48,25,1,1) 100%);
+  --white-color: #fff;
+  --mild-color: #CCC;
+  --light-salmon: #c59a89;
+  --medium-salmon: #e58e73;
+  --orange: #F5793B;
+  --violet: #62034e;
+
+ }
+
+ a{
+  color: var(--orange);; 
+ text-decoration: none;
+ font-size: 1rem;
+}
+
+a:hover{
+  color: var(--violet);; 
+ text-decoration: none;
+
+}
 
 #cards-container {
   display: grid;
@@ -46,7 +73,7 @@
   justify-content: center;
   align-items: start;
   padding: 5px 10px 0px 10px;
-  color:#F5793B;
+  color: var(--orange);
   font-size: 19px;
 }
 
@@ -93,7 +120,7 @@
 
 .button-learnMore {
   cursor: pointer;
-  border: 1px solid rgba(245, 121, 59, 1);
+  border: 1px solid var(--orange);
   color: grey;
   -webkit-border-radius: 50px;
   border-radius: 50px;
@@ -174,7 +201,7 @@ a {
 }
 
 #location, #calendar {
-   border: 1px solid #F5793B; /*  #F5793B 62034e ;*/
+   border: 1px solid var(--orange);; /*  #F5793B 62034e ;*/
     color:    rgb(194, 194, 194);
     -webkit-border-radius: 50px; 
     border-radius: 50px; 
@@ -194,14 +221,16 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   }
 
   .modal-header    {
-    background: linear-gradient(180deg, rgba(98,3,78,1) 0%, rgba(48,25,1,1) 100%);
+    background: var(--gradient);
     border-bottom: 0px;
   }
   .modal-footer {
     border-top: 0px;
   }
-  
+  .btn-close {
 
+    background: transparent url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23F5793B'><path d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/></svg>");
+  }
   .modal-body, .modal-footer {
     background-color: #0b0600;
   }
@@ -244,5 +273,4 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .buttons-container .fa-pinterest{
   color: #e60023;
 }
-
 
