--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
   column-gap: 20px;
   row-gap: 20px;
   margin: 20px 0px 20px 0px;
-  padding: 0px 50px 0px 50px;
+  padding: 0px 20px 0px 20px;
 }
 
 .card {
@@ -112,11 +112,11 @@ a {
   cursor: pointer;
 }
 
-
 @media only screen and (max-width: 992px) {
   #cards-container {
     grid-template-columns: repeat(3, 1fr);
-    margin: 20px 0;
+    /* margin: 20px 0; */
+    padding:10px;
   }
 }
 
@@ -124,7 +124,8 @@ a {
 @media only screen and (max-width: 768px) {
   #cards-container {
     grid-template-columns: repeat(2, 1fr);
-    margin: 20px 0;
+    margin: 20px 0; 
+    padding:20px;
   }
 
   .card-status-details {
