--- a/css/styles.css
+++ b/css/styles.css
@@ -244,11 +244,21 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     border: none;
     outline: none;
     background-color: rgb(88, 87, 87);
-    color : white;
+    
     cursor: pointer;
-    padding: 15px;
+    padding: 18px;
     border-radius: 10px;
-    font-size: 18px;
+  }
+
+  .arrow {
+    border: solid #302f2f;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    margin-top: 5px;
+    padding: 4px;
+  }
+  .arrow.up {  
+    transform: rotate(-135deg);
   }
 
   #myBtn:hover {
