--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ a:hover{
 .card {
   background-color: rgba(37, 38, 37, 0.6);
   width: 100%;
-  height: 480px;
+  height: 500px;
   border-radius: 15px;
   transition: 0.3s;
   min-width: 240px;
@@ -126,12 +126,13 @@ a:hover{
   border-radius: 50px;
   font-size: 14px;
   background-color:  transparent;
-  width: 100%;
-  padding: 2px;
+  width: 50%;
+  padding: 5px;
 }
 
 .button-learnMore:hover { 
   color: rgb(255,255,255);
+  background-color: var(--orange);
 }
 
 a {
@@ -255,11 +256,11 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     background-color: rgb(117, 115, 115);
   }
 
-  .share-btn-container{
-    background-color: white;
-    display: flex;
-    
-    padding: 16px;
+  .buttons-container i{
+    font-size: 20px;
+   
+    margin: 12px 7px;
+  
 }
 
 .buttons-container .fa-facebook{
