--- a/components/modal/template.html
+++ b/components/modal/template.html
@@ -26,7 +26,7 @@
 
               <div class="modal-info-content">
                 <div class="modal-info-title">
-                <i class="fa fa-calendar" aria-hidden="true"></i> Event Dates:
+                <i class="fa fa-calendar" aria-hidden="true"></i> Event Dates: <a href="#" target="_blank" id="modal-bookmark">Add to Bookmarks</a>
                 </div>
                 <div id="modal-dates-text" class="modal-info-dates">
                 </div>
