--- a/css/layout.css
+++ b/css/layout.css
@@ -165,3 +165,28 @@ navbar {
 #map {
   height: 200px;
 }
+
+#bookmark{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  border: 1px solid var(--orange);
+  color: grey;
+  -webkit-border-radius: 50px;
+  border-radius: 50px;
+  font-size: 14px;
+  background-color: transparent;
+
+  padding:5px 10px;
+}
+
+#bookmark i{
+  color : var(--orange);
+ 
+}
+#bookmarkCount{
+  position: absolute;
+ right: 16px;
+ color: #fff;
+}
